# DeadGhost

./: .gitignore  README.md  main.py  model.py  pyproject.toml  test.py  timer.py
botlibs/: alconna.py  db.py  gm.py
data/: allow_group.json
data/sign-in/hitokoto/cache/: archive.json
data/sign-in/user/: 1038839996.json  1159311680.json  1265915804.json  1456815820.json  1485498641.json  1578794468.json  1708966823.json  1724118140.json  1784587130.json  1795865323.json  2044267448.json  2079563611.json  2171137457.json  2198958109.json  2352851729.json  2374658406.json  2544704967.json  2561185804.json  2605709513.json  2691738021.json  2706187427.json  2735966642.json  2831369078.json  2931234251.json  297384833.json  3026636848.json  3043932876.json  3077494336.json  3084468579.json  3122184155.json  3140619130.json  3280442613.json  3344642107.json  3429649596.json  3472262929.json  3552455381.json  3609867778.json  663971895.json
modules/: admin.py  event.py  gm.py  key_reply.py  scheduler.py  sign_in.py
